--- a/src/app/characters/pages/list/list.component.html
+++ b/src/app/characters/pages/list/list.component.html
@@ -63,12 +63,19 @@
             (click)="onRowClicked(row)"
           ></mat-row>
         </mat-table>
+        <!-- Spinner while data is fetching and displayed below de table headers -->
         <div
           class="spinner-container d-flex justify-content-center mt-5"
           *ngIf="dataSource.loading$ | async"
         >
           <mat-spinner></mat-spinner>
         </div>
+        <!-- Paginator -->
+        <mat-paginator
+          [length]="character?.listCount"
+          [pageSize]="5"
+          [pageSizeOptions]="[10, 25, 50]"
+        ></mat-paginator>
       </div>
     </div>
   </div>
