--- a/src/app/characters/pages/list/list.component.html
+++ b/src/app/characters/pages/list/list.component.html
@@ -11,71 +11,47 @@
     <!-- Table Begins -->
     <div class="row">
       <div class="col">
-        <mat-table
-          class="characters-table mat-elevation-z8"
-          [dataSource]="dataSource"
-        >
+        <mat-table class="characters-table mat-elevation-z8" [dataSource]="dataSource">
           <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.name }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.name }}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="race">
             <mat-header-cell *matHeaderCellDef>Race</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.race }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.race }}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="gender">
             <mat-header-cell *matHeaderCellDef>Gender</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.gender }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.gender }}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="hair">
             <mat-header-cell *matHeaderCellDef>Hair</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.hair }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.hair }}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="realm">
             <mat-header-cell *matHeaderCellDef>Realm</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.realm }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.realm }}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="spouse">
             <mat-header-cell *matHeaderCellDef>Spouse</mat-header-cell>
-            <mat-cell *matCellDef="let character"
-              >{{ character.spouse }}</mat-cell
-            >
+            <mat-cell *matCellDef="let character">{{ character.spouse }}</mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row
-            *matRowDef="let row; columns: displayedColumns"
-            (click)="onRowClicked(row)"
-          ></mat-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></mat-row>
         </mat-table>
         <!-- Spinner while data is fetching and displayed below de table headers -->
-        <div
-          class="spinner-container d-flex justify-content-center mt-5"
-          *ngIf="dataSource.loading$ | async"
-        >
+        <div class="spinner-container d-flex justify-content-center mt-5" *ngIf="dataSource.loading$ | async">
           <mat-spinner></mat-spinner>
         </div>
         <!-- Paginator -->
-        <mat-paginator
-          [length]="character?.listCount"
-          [pageSize]="5"
-          [pageSizeOptions]="[10, 25, 50]"
-        ></mat-paginator>
+        <!-- TODO: we need the character data not only the docs[] property, so we need pipe in the component and not in the service -->
+        <mat-paginator [length]="character?.limit" [pageSize]="5" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
       </div>
     </div>
   </div>
